--- a/src/main/resources/view/login_form.fxml
+++ b/src/main/resources/view/login_form.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.controller.LoginFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="400.0" style="-fx-background-color: #1B1464;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginFormController">
+   <children>
+      <ImageView layoutX="136.0" layoutY="154.0">
+         <image>
+            <Image url="@../image/icons8-whatsapp-128.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="117.0" layoutY="48.0" text="ZenChat" textFill="WHITE">
+         <font>
+            <Font name="Impact" size="50.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtUsername" layoutX="67.0" layoutY="379.0" promptText="username" stylesheets="@../stylesheets/textfield.css">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </TextField>
+      <JFXButton layoutX="160.0" layoutY="467.0" onAction="#btnLoginOnAction" style="-fx-background-radius: 25; -fx-background-color: white;" text="Log in" textFill="#1b1464">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </JFXButton>
+   </children>
 </AnchorPane>
