--- a/src/main/resources/view/client_form.fxml
+++ b/src/main/resources/view/client_form.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ClientFormController">
@@ -40,7 +41,7 @@
                <font>
                   <Font name="Segoe UI Semibold" size="12.0" />
                </font></TextField>
-            <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="-2.0" onAction="#btnEmojiOnAction" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 25;">
+            <JFXButton fx:id="emoji" contentDisplay="GRAPHIC_ONLY" layoutX="-2.0" onAction="#btnEmojiOnAction" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 25;">
                <graphic>
                   <ImageView fitHeight="33.0" fitWidth="33.0">
                      <image>
@@ -69,7 +70,6 @@
             </JFXButton>
          </children>
       </AnchorPane>
-      <ScrollPane layoutY="54.0" prefHeight="492.0" prefWidth="400.0" />
       <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="352.0" layoutY="552.0" onAction="#btnSendOnAction" prefHeight="40.0" prefWidth="40.0" style="-fx-background-radius: 25; -fx-background-color: #1B1464;">
          <graphic>
             <ImageView>
@@ -90,5 +90,10 @@
             <Image url="@../image/icons8-user-60.png" />
          </image>
       </ImageView>
+      <ScrollPane layoutY="54.0" prefHeight="492.0" prefWidth="400.0">
+         <content>
+            <VBox fx:id="vBox" prefHeight="147.0" prefWidth="398.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
